--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -87,6 +87,9 @@
       <property name="value">
        <number>0</number>
       </property>
+      <property name="alignment">
+       <set>Qt::AlignJustify|Qt::AlignVCenter</set>
+      </property>
      </widget>
     </item>
    </layout>
@@ -100,7 +103,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>23</height>
+     <height>22</height>
     </rect>
    </property>
    <property name="sizePolicy">
